frontend/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: lms-frontend-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.priority: "1"

spec:
  ingressClassName: traefik

  rules:
    # - host: website-project.uz
    http:
      paths:
        - path: /
          pathType: Prefix

          backend:
            service:
              name: frontend

              port:
                number: 80
